--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Tiago Martins
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Web Developer and aspirant to become a Game Developer, I try to learn something new everyday
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
